force-app/main/default/objects/Inasistencia__c/Inasistencia__c.object-meta.xml
<CustomObject>
    <label>Inasistencia</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Inasistencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inasistencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>