force-app/main/default/objects/Inasistencia__c/fields/Boletin__c.field-meta.xml
<CustomField>
    <fullName>Boletin__c</fullName>
    <label>Boletín</label>
    <referenceTo>Boletin__c</referenceTo>
    <relationshipLabel>Inasistencias</relationshipLabel>
    <relationshipName>Inasistencias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>