force-app/main/default/objects/Inasistencia__c/fields/Primer_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Primer_trimestre__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Primer trimestre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>