force-app/main/default/objects/Inasistencia__c/fields/Segundo_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_trimestre__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Segundo trimestre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>