force-app/main/default/objects/Inasistencia__c/validationRules/Inasistencias_no_negativas.validationRule-meta.xml
<ValidationRule>
    <fullName>Inasistencias_no_negativas</fullName>
    <active>true</active>
    <description>La inasistencias deben ser 0 o positivas</description>
    <errorConditionFormula>Primer_trimestre__c  &lt; 0   ||  Segundo_trimestre__c  &lt; 0   ||  Tercer_trimestre__c &lt; 0</errorConditionFormula>
    <errorMessage>Las inasistencias no pueden ser negativas.</errorMessage>
</ValidationRule>